--- a/src/app/flashcard/flashcard.component.html
+++ b/src/app/flashcard/flashcard.component.html
@@ -1,180 +1,84 @@
+<!--<div class="container">-->
+  <!--<h2>Simple Collapsible</h2>-->
+  <!--<p>Click on the button to toggle between showing and hiding content.</p>-->
+  <!--<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo">Simple collapsible</button>-->
+  <!--<div id="demo" class="collapse">-->
+    <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+    <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,-->
+    <!--quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.-->
+  <!--</div>-->
+<!--</div>-->
+<!--tabs start-->
+
+<!--<button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>-->
+<!--<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">News</button>-->
+<!--<button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>-->
+<!--<button class="tablink" onclick="openPage('About', this, 'orange')">About</button>-->
+
+<!--<div id="Home" class="tabcontent">-->
+  <!--<h3>Home</h3>-->
+  <!--<p>Home is where the heart is..</p>-->
+<!--</div>-->
+
+<!--<div id="News" class="tabcontent">-->
+  <!--<h3>News</h3>-->
+  <!--<p>Some news this fine day!</p>-->
+<!--</div>-->
+
+<!--<div id="Contact" class="tabcontent">-->
+  <!--<h3>Contact</h3>-->
+  <!--<p>Get in touch, or swing by for a cup of coffee.</p>-->
+<!--</div>-->
+
+<!--<div id="About" class="tabcontent">-->
+  <!--<h3>About</h3>-->
+  <!--<p>Who we are and what we do.</p>-->
+<!--</div>-->
+
+<!--tabs close-->
 
 
 
 <section id="services" class="bg-one section">
   <div class="container">
+
     <div class="row">
 
       <!-- section title -->
       <div class="title text-center wow fadeIn" data-wow-duration="bbbb">
         <h2>Flash <span class="color">Cards</span></h2>
+            <form class="search-bg" action="./">
+              <label class="search-bg__title">Choose From A Range Of <span>Online Courses</span></label>
+              <input class="search-bg__text" type="text" name="search-bg-name" placeholder=" Would you like for search flash cards?">
+              <button class="search-bg__btn" type="button">Search</button>
+            </form>
         <div class="border"></div>
       </div>
+      <h2 style="text-align: center;">Browse <span class="color">FlashCards</span></h2>
       <!-- /section title -->
 
       <!-- Single Service Item -->
-      <br>
-      <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="hhhhh">
-        <div class="service-block text-center">
-          <div class="tf-ion-laptop text-center">
-            <i class="tf-globe"></i>
-          </div>
-          <h3>English</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-            iaculis arcu at mauris dapibus consectetur.</p>
-        </div>
-      </article>
-      <!-- End Single Service Item -->
-
-      <!-- Single Service Item -->
-      <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
-        <div class="service-block text-center">
-          <div class="service-icon text-center">
-            <i class="tf-ion-laptop"></i>
-          </div>
-          <h3>Math</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-            iaculis arcu at mauris dapibus consectetur.</p>
-        </div>
-      </article>
-      <!-- End Single Service Item -->
-
-      <!-- Single Service Item -->
-      <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
-        <div class="service-block text-center">
-          <div class="service-icon text-center">
-            <i class="tf-genius"></i>
-          </div>
-          <h3>Data Base</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-            iaculis arcu at mauris dapibus consectetur.</p>
-        </div>
-      </article>
-      <!-- End Single Service Item -->
-
-      <!-- Single Service Item -->
-      <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
-        <div class="service-block text-center">
-          <div class="service-icon text-center">
-            <i class="tf-dial"></i>
-          </div>
-          <h3>Programming</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-            iaculis arcu at mauris dapibus consectetur.</p>
-        </div>
-      </article>
-      <!-- End Single Service Item -->
-
-      <!-- Single Service Item -->
-      <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
-        <div class="service-block text-center">
-          <div class="service-icon text-center">
-            <i class="tf-target3"></i>
-          </div>
-          <h3>Computer</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-            iaculis arcu at mauris dapibus consectetur.</p>
-        </div>
-      </article>
-      <!-- End Single Service Item -->
-
-      <!-- Single Service Item -->
-      <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="html" data-wow-delay="600ms">
-        <div class="service-block text-center kill-margin-bottom">
-          <div class="service-icon text-center">
-            <i class="tf-lifesaver"></i>
-          </div>
-          <h3>Networking</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-            iaculis arcu at mauris dapibus consectetur.</p>
-        </div>
-      </article>
-      <!-- End Single Service Item -->
 
     </div>    <!-- End row -->
   </div>    <!-- End container -->
 </section>   <!-- End section -->
 
 
-
 <div class="container" id="tourpackages-carousel">
 
   <div class="row">
 
-    <div class="col-xs-18 col-sm-6 col-md-3 col-lg-3">
-      <div class="thumbnail">
-        <img src="../assets/images/courses/course_01.jpg" alt="">
-        <div class="caption">
-          <h4>Physics</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus
-            amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-          <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs"
-                                                                                 role="button">Button</a></p>
-        </div>
-      </div>
-    </div>
 
-    <div class="col-xs-18 col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="../assets/images/courses/course_02.jpg" alt="">
-        <div class="caption">
-          <h4>Thumbnail label</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus
-            amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-          <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs"
-                                                                                 role="button">Button</a></p>
-        </div>
-      </div>
-    </div>
 
-    <div class="col-xs-18 col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="../assets/images/courses/course_03.jpg" alt="">
-        <div class="caption">
-          <h4>Thumbnail label</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus
-            amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-          <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs"
-                                                                                 role="button">Button</a></p>
-        </div>
-      </div>
-    </div>
 
-    <div class="col-xs-18 col-sm-6 col-md-3">
-      <div class="thumbnail">
-        <img src="../assets/images/courses/course_05.jpg" alt="">
-        <div class="caption">
-          <h4>Thumbnail label</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus
-            amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
-          <p><a href="#" class="btn btn-info btn-xs" role="button">Button</a> <a href="#" class="btn btn-default btn-xs"
-                                                                                 role="button">Button</a></p>
-        </div>
-      </div>
-    </div>
+
+
 
 
     <div class="container" id="tourpackages-carousel">
 
-      <div class="row">
 
-        <div class="col-xs-18 col-sm-6 col-md-3 col-lg-3">
-          <div class="thumbnail" style="border-top-color: blue;">
-            <!--<img src="../assets/images/courses/course_01.jpg"  alt="">-->
-            <div class="caption">
-              <h4>ARTS</h4>
-
-              <div class="home1">
-                <li><a href="/subject/art" title="art flashcards">art flashcards</a></li>
-                <li><a href="/subject/art-history" title="art history flashcards">art history flashcards</a></li>
-                <li><a href="/subject/fine-art" title="fine art flashcards">fine art flashcards</a></li>
-                <li><a href="/subject/literature" title="literature flashcards">literature flashcards</a></li>
-                <li><a href="/subject/music" title="music flashcards">music flashcards</a></li>
-                <br>
-              </div>
-            </div>
-          </div>
-        </div>
+      <!--  <!--</div>-->
 
 
         <div class="col-xs-18 col-sm-6 col-md-3 col-lg-3">
@@ -184,7 +88,7 @@
               <h4>GENERAL</h4>
 
               <div class="home2">
-                <li><a href="/subject/capitals" title="capitals flashcards">capitals flashcards</a></li>
+                <li><a routerLink="/fcdetail" title="capitals flashcards">capitals flashcards</a></li>
                 <li><a href="/subject/dance" title="dance flashcards">dance flashcards</a></li>
                 <li><a href="/subject/education" title="education flashcards">education flashcards</a></li>
                 <li><a href="/subject/sports" title="sports flashcards">sports flashcards</a></li>
@@ -271,9 +175,28 @@
             </div>
           </div>
         </div>
+      <div class="col-xs-18 col-sm-6 col-md-3 col-lg-3">
+        <div class="thumbnail" style="border-top-color: gray;">
+          <!--<img src="../assets/images/courses/course_01.jpg"  alt="">-->
+          <div class="caption">
+            <h4>PROFESSIONAL</h4>
+
+            <div class="home2">
+              <li><a href="/subject/bartending" title="bartending flashcards">bartending flashcards</a></li>
+              <li><a href="/subject/cosmetology" title="cosmetology flashcards">cosmetology flashcards</a></li>
+              <li><a href="/subject/criminal-justice" title="criminal justice flashcards">criminal justice
+                flashcards</a></li>
+              <li><a href="/subject/software" title="software flashcards">software flashcards</a></li>
+              <li><a href="/subject/law" title="law flashcards">law flashcards</a></li><br>
+            </div>
+
+          </div>
+        </div>
+      </div>
 
 
-        <div class="col-xs-18 col-sm-6 col-md-3 col-lg-3">
+
+      <div class="col-xs-18 col-sm-6 col-md-3 col-lg-3">
           <div class="thumbnail" style="border-top-color:deeppink;">
             <!--<img src="../assets/images/courses/course_01.jpg"  alt="">-->
             <div class="caption">
@@ -298,7 +221,7 @@
               <h4>LITERATURE</h4>
 
               <div class="home2" >
-                <li ><a href="/subject/art" title="art flashcards">art flashcards</a></li>
+                <li ><a href="/" title="art flashcards">art flashcards</a></li>
                 <li><a href="/subject/art-history" title="art history flashcards">art history flashcards</a></li>
                 <li><a href="/subject/fine-art" title="fine art flashcards">fine art flashcards</a></li>
                 <li><a href="/subject/literature" title="literature flashcards">literature flashcards</a></li>
@@ -308,12 +231,21 @@
 
             </div>
           </div>
-        </div>
+          <div class="row">
+
+
+          </div>
+
+
+
 
 
       </div><!-- End row -->
 
     </div><!-- End container -->
+
+
+
 
 
 
