--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,7 +1,4 @@
 
-
-		
-    
     <div class="info-box-04" id="pics">
       <div class="container" >
         <div class="row">
@@ -73,201 +70,252 @@
 					</div>
 					<div class="row">
 						<div class="col-lg-12">
-							<div class="owl-carousel owl-option-04">
-								<div class="item">
+							<div class="slick-main owl-option-04">
+
+
+
+
+                <div class="item">
+                  <div class="product-list__item">
+                    <figure class="product-list__img">
+                      <a href="single_course.html">
+                        <img src="/assets/img/book2.jpg" alt="">
+                      </a>
+                    </figure>
+                    <div class="product-list__content">
+                      <h3 class="product-list__title">
+                        <a href="single_course.html">Computer</a>
+                      </h3>
+                      <ul class="product-list__star-list">
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p class="product-list__price">$ 150</p>
+                    </div>
+                    <div class="product-list__item-info">
+                      <p class="item-info__text-01">14 Lessons</p>
+                      <p class="item-info__text-02">25 Seats</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="product-list__item">
+                    <figure class="product-list__img">
+                      <a href="single_course.html">
+                        <img src="/assets/img/book4.jpg" alt="">
+                      </a>
+                    </figure>
+                    <div class="product-list__content">
+                      <h3 class="product-list__title">
+                        <a href="single_course.html">Math</a>
+                      </h3>
+                      <ul class="product-list__star-list">
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p class="product-list__price">$ 150</p>
+                    </div>
+                    <div class="product-list__item-info">
+                      <p class="item-info__text-01">14 Lessons</p>
+                      <p class="item-info__text-02">25 Seats</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="product-list__item">
+                    <figure class="product-list__img">
+                      <a href="single_course.html">
+                        <img src="/assets/img/book5.jpg" alt="">
+
+                      </a>
+                    </figure>
+                    <div class="product-list__content">
+                      <h3 class="product-list__title">
+                        <a href="single_course.html">Physics</a>
+                      </h3>
+                      <ul class="product-list__star-list">
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p class="product-list__price">$ 150</p>
+                    </div>
+                    <div class="product-list__item-info">
+                      <p class="item-info__text-01">14 Lessons</p>
+                      <p class="item-info__text-02">25 Seats</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="product-list__item">
+                    <figure class="product-list__img">
+                      <a href="single_course.html">
+                        <img src="/assets/img/eng.jpg" alt="">
+                      </a>
+                    </figure>
+                    <div class="product-list__content">
+                      <h3 class="product-list__title">
+                        <a href="single_course.html">English</a>
+                      </h3>
+                      <ul class="product-list__star-list">
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p class="product-list__price">$ 150</p>
+                    </div>
+                    <div class="product-list__item-info">
+                      <p class="item-info__text-01">14 Lessons</p>
+                      <p class="item-info__text-02">25 Seats</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="product-list__item">
+                    <figure class="product-list__img">
+                      <a href="single_course.html">
+                        <img src="/assets/img/book6.jpg" alt="">
+                      </a>
+                    </figure>
+                    <div class="product-list__content">
+                      <h3 class="product-list__title">
+                        <a href="single_course.html">Chemistry</a>
+                      </h3>
+                      <ul class="product-list__star-list">
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                          </a>
+                        </li>
+                      </ul>
+                      <p class="product-list__price">$ 150</p>
+                    </div>
+                    <div class="product-list__item-info">
+                      <p class="item-info__text-01">14 Lessons</p>
+                      <p class="item-info__text-02">25 Seats</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
 									<div class="product-list__item">
 										<figure class="product-list__img">
 											<a href="single_course.html">
-												<img src="img/product_list/product_img-01.jpg" alt="">
+												<img src="/assets/img/book7.jpg" alt="">
 											</a>
 										</figure>
 										<div class="product-list__content">
-											<a class="product-list__category" href="#">Economy</a>
 											<h3 class="product-list__title">
-												<a href="single_course.html">Macroeconomy</a>
-											</h3>
-											<ul class="product-list__star-list">
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-											</ul>
-											<p class="product-list__price">$ 150</p>
-										</div>
-										<div class="product-list__item-info">
-											<p class="item-info__text-01">14 Lessons</p>
-											<p class="item-info__text-02">25 Seats</p>
-										</div>
-									</div>
-								</div>
-								<div class="item">
-									<div class="product-list__item">
-										<figure class="product-list__img">
-											<a href="single_course.html">
-												<img src="img/product_list/product_img-02.jpg" alt="">
-											</a>
-										</figure>
-										<div class="product-list__content">
-											<a class="product-list__category" href="#">Biology</a>
-											<h3 class="product-list__title">
-												<a href="single_course.html">Anatomy Course</a>
-											</h3>
-											<ul class="product-list__star-list">
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-											</ul>
-											<p class="product-list__price">$ 90</p>
-										</div>
-										<div class="product-list__item-info">
-											<p class="item-info__text-01">10 Lessons</p>
-											<p class="item-info__text-02">14 Seats</p>
-										</div>
-									</div>
-								</div>
-								<div class="item">
-									<div class="product-list__item">
-										<figure class="product-list__img">
-											<a href="single_course.html">
-												<img src="img/product_list/product_img-03.jpg" alt="">
-											</a>
-										</figure>
-										<div class="product-list__content">
-											<a class="product-list__category" href="#">Mathematics</a>
-											<h3 class="product-list__title">
-												<a href="single_course.html">Geometry Course</a>
-											</h3>
-											<ul class="product-list__star-list">
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-											</ul>
-											<p class="product-list__price">$ 180</p>
-										</div>
-										<div class="product-list__item-info">
-											<p class="item-info__text-01">21 Lessons</p>
-											<p class="item-info__text-02">56 Seats</p>
-										</div>
-									</div>
-								</div>
-								<div class="item">
-									<div class="product-list__item">
-										<figure class="product-list__img">
-											<a href="single_course.html">
-												<img src="img/product_list/product_img-04.jpg" alt="">
-											</a>
-										</figure>
-										<div class="product-list__content">
-											<a class="product-list__category" href="#">Design</a>
-											<h3 class="product-list__title">
-												<a href="single_course.html">Interior Design</a>
-											</h3>
-											<ul class="product-list__star-list">
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														<i class="fa fa-star" aria-hidden="true"></i>
-													</a>
-												</li>
-											</ul>
-											<p class="product-list__price">$ 210</p>
-										</div>
-										<div class="product-list__item-info">
-											<p class="item-info__text-01">17 Lessons</p>
-											<p class="item-info__text-02">15 Seats</p>
-										</div>
-									</div>
-								</div>
-								<div class="item">
-									<div class="product-list__item">
-										<figure class="product-list__img">
-											<a href="single_course.html">
-												<img src="/assets/img/product_list/product_img-01.jpg" alt="">
-											</a>
-										</figure>
-										<div class="product-list__content">
-											<a class="product-list__category" href="#">Economy</a>
-											<h3 class="product-list__title">
-												<a href="single_course.html">Macroeconomy</a>
+												<a href="single_course.html">Networking</a>
 											</h3>
 											<ul class="product-list__star-list">
 												<li>
@@ -312,9 +360,8 @@
 											</a>
 										</figure>
 										<div class="product-list__content">
-											<a class="product-list__category" href="#">Technology</a>
 											<h3 class="product-list__title">
-												<a href="single_course.html">Word Press</a>
+												<a href="single_course.html">Biology</a>
 											</h3>
 											<ul class="product-list__star-list">
 												<li>
@@ -669,7 +716,7 @@
 										<span>Sep</span>
 									</div>
 									<h4 class="news-info__title">
-										<a href="single_event.html">Campus Tour 2017</a>
+										<a routerLink="event">Campus Tour 2017</a>
 									</h4>
 									<div class="news-info__text">
 										<p>Mauris ultricies mauris non odio facilisis convallis. </p>
