--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -7,7 +7,7 @@
              <div class="panel-body">
                <div class="text-center">
                  <h3><i class="fa fa-lock fa-4x"></i></h3>
-                 <h2 class="text-center"> Reset Password?</h2>
+                 <h2 class="text-center"> Password?</h2>
                  <!-- <p>You can reset your password here.</p> -->
                  <div class="panel-body">
    
